--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <nav id="navigation" class="navigation" role="navigation" aria-label="Main navigation">
         <div class="nav-container">
             <a href="#home" class="nav-brand">
-                <i data-lucide="mountain" class="brand-icon" aria-hidden="true"></i>
+               <img src="/Img/logo.png" alt="" class="brand-icon" style="width: 3rem;"/>
                 <span class="brand-text">Pahari Goodness</span>
             </a>
 
@@ -89,13 +89,14 @@
                             <span class="title-line fade-in-up delay-1">Goodness</span>
                         </h1>
                         <p class="hero-subtitle fade-in-up delay-2">
-                            Premium Himalayan products crafted with tradition and excellence
+                            Nature’s Wisdom from Himalayan Peaks - Pure, Nutrient-Rich, Time-Tested
+Nothing Added, Nothing Lost
                         </p>
                         <div class="hero-cta fade-in-up delay-3">
                             <a href="#products" class="cta-button primary">
                                 Discover Our Products
                             </a>
-                            <a href="#story" class="cta-button secondary">
+                            <a href="#about" class="cta-button secondary">
                                 Our Story
                             </a>
                         </div>
@@ -114,8 +115,7 @@
                     <header class="section-header">
                         <h2 class="section-title">Our Premium Collection</h2>
                         <p class="section-subtitle">
-                            Discover the finest products from the Himalayan region, 
-                            each carefully selected for quality and authenticity.
+                            Straight from the Source. No Middlemen. No Nonsense
                         </p>
                     </header>
 
@@ -139,15 +139,14 @@
                             <h2 class="section-title">Our Heritage Story</h2>
                             <div class="story-text">
                                 <p class="story-paragraph">
-                                    Born in the pristine valleys of the Himalayas, Pahari Goodness represents 
-                                    more than just premium products—it's a celebration of mountain culture, 
-                                    traditional wisdom, and the pure essence of nature.
+                                    We were raised where snow melts into streams and wisdom grows on trees. Pahari Goodness was born in the untouched Himalayas — where nature doesn’t just exist, it teaches. What started as a longing for purity, authenticity and tradition became a bridge between ancient mountain wisdom and mindful living today. We bring you nutrient-rich, time-tested treasures — from cold-pressed oils to wild-grown dry fruits — made for people, not production lines. 
+No unnecessary additives. No gimmicks. No shortcuts. Just pure, powerful goodness — straight from the source. 
                                 </p>
-                                <blockquote class="story-quote">
+                                <!-- <blockquote class="story-quote">
                                     "Every jar, every packet carries the soul of the mountains 
                                     and the love of our people."
                                     <cite>— Founder, Pahari Goodness</cite>
-                                </blockquote>
+                                </blockquote> -->
                             </div>
                         </div>
                         <div class="story-image">
@@ -155,7 +154,7 @@
                         </div>
                     </div>
 
-                    <div class="story-mission" data-section-id="1">
+                    <!-- <div class="story-mission" data-section-id="1">
                         <div class="story-image">
                             <img src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg" alt="Traditional honey harvesting in mountains" loading="lazy">
                         </div>
@@ -181,30 +180,30 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
                     <div class="story-features" data-section-id="2">
                         <h3 class="section-title">What Sets Us Apart</h3>
                         <div class="features-grid">
                             <div class="feature-card">
-                                <i data-lucide="heart" class="feature-icon"></i>
-                                <h4 class="feature-title">Crafted with Love</h4>
-                                <p class="feature-description">Every product is made with care and traditional methods passed down through generations.</p>
+                                <i data-lucide="shield-check" class="feature-icon"></i>
+                                <h4 class="feature-title">Pure & Safe</h4>
+                                <p class="feature-description">No artificial flavors, colors, or harsh chemicals—only clean, honest ingredients.</p>
                             </div>
                             <div class="feature-card">
-                                <i data-lucide="leaf" class="feature-icon"></i>
-                                <h4 class="feature-title">Naturally Pure</h4>
-                                <p class="feature-description">We source only the finest natural ingredients from the pristine Himalayan environment.</p>
+                                <i data-lucide="mountain" class="feature-icon"></i>
+                                <h4 class="feature-title">Born in Himalayas</h4>
+                                <p class="feature-description">Crafted in small batches using traditional Himalayan ingredients and techniques.</p>
                             </div>
                             <div class="feature-card">
-                                <i data-lucide="users" class="feature-icon"></i>
-                                <h4 class="feature-title">Community Focused</h4>
-                                <p class="feature-description">Supporting local communities and preserving traditional craftsmanship methods.</p>
+                                <i data-lucide="handshake" class="feature-icon"></i>
+                                <h4 class="feature-title">Ethically Sourced</h4>
+                                <p class="feature-description">We empower tribal farmers and preserve native ecosystems through ethical practices.</p>
                             </div>
                             <div class="feature-card">
-                                <i data-lucide="award" class="feature-icon"></i>
-                                <h4 class="feature-title">Premium Quality</h4>
-                                <p class="feature-description">Our commitment to excellence ensures every product meets the highest standards.</p>
+                                <i data-lucide="leafy-green" class="feature-icon"></i>
+                                <h4 class="feature-title">Clean Ingredients</h4>
+                                <p class="feature-description">Free from parabens, sulphates, and unnecessary preservatives—safe for everyday use.</p>
                             </div>
                         </div>
                     </div>
@@ -319,26 +318,33 @@
                         <div class="about-text">
                             <h2 class="section-title">Our Story</h2>
                             <p class="about-paragraph">
-                                Founded in the pristine valleys of Himachal Pradesh, Pahari Goodness began as a 
-                                passionate endeavor to share the authentic flavors and traditional wisdom of the 
-                                Himalayan region with the world. What started as a small family business has grown 
-                                into a trusted brand that represents the very essence of mountain purity.
+                                We were raised where snow melts into streams and wisdom grows on trees.
+ Pahari Goodness was founded by two sisters who grew up in the untouched, snow-clad Himalayas — where nature doesn’t just exist, it teaches.
                             </p>
                             <p class="about-paragraph">
-                                Our journey is rooted in respect for nature, commitment to quality, and deep 
-                                appreciation for the communities that have preserved these ancient traditions. 
-                                Every product we offer carries with it the soul of the mountains and the 
-                                dedication of the people who call these peaks home.
+                               The mountains taught us purity, authenticity, and resilience — and the unshakable truth that what you eat and how you live are deeply connected.
+ That’s not philosophy — that’s just life at altitude.
+But life pulled us downhill — into cities where the food got flashier, tradition got trendified, and “wellness” became a marketing gimmick. The purity we grew up with was reduced to labels and shelf life.
+ The rhythm of the Himalayas faded… but never left us.
+Turns out, we weren’t the only ones craving the real stuff — the kind made for people, not production lines.
+                            </p>
+                            <p class="about-paragraph">
+                                So, we built Pahari Goodness — not a brand, but a bridge.
+ A way to bring time-tested, nutrient-rich, unadulterated Himalayan treasures to people who know the difference between “organic” and the real thing.
+Every jar, every handful, every product we make is powered by ancient mountain wisdom — and increasingly backed by science.
+ Cold-pressed oils. Wild-grown nuts. Natural polyphenols. Remedies passed down by grandmothers and now studied in labs.
+No additives. No fortifications. No fancy fluff.
+ Because when nature gets it right, we don’t mess with it.
+You may not always stand under Himalayan skies — but with Pahari Goodness, you carry a piece of them with you.
                             </p>
                             <blockquote class="about-quote">
-                                "We don't just sell products; we share a way of life that honors both 
-                                tradition and innovation."
-                                <cite>— Rajesh Kumar, Founder</cite>
+                                "Take a little part of the Himalayas with you wherever you go."
+                                <!-- <cite>— Rajesh Kumar, Founder</cite> -->
                             </blockquote>
                         </div>
-                        <div class="about-image">
+                        <!-- <div class="about-image">
                             <img src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg" alt="Traditional honey harvesting" loading="lazy">
-                        </div>
+                        </div> -->
                     </div>
                 </section>
 
@@ -404,7 +410,7 @@
                 </section>
 
                 <!-- Timeline -->
-                <section class="about-timeline" data-section-id="3">
+                <!-- <section class="about-timeline" data-section-id="3">
                     <h2 class="section-title">Our Journey</h2>
                     <div class="timeline">
                         <div class="timeline-item">
@@ -448,7 +454,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
 
                 <!-- Impact -->
                 <section class="about-team" data-section-id="4">
@@ -480,13 +486,13 @@
             <!-- Products Hero Section -->
             <section class="products-hero">
                 <div class="products-hero-background">
-                    <img src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg" alt="Himalayan products" class="products-hero-image">
+                    <img src="https://images.pexels.com/photos/417074/pexels-photo-417074.jpeg" alt="Himalayan products" class="products-hero-image">
                     <div class="products-hero-overlay"></div>
                 </div>
                 <div class="products-hero-content">
                     <h1 class="products-hero-title">Our Premium Collection</h1>
                     <p class="products-hero-subtitle">
-                        Discover authentic Himalayan products, each carefully selected for quality and tradition
+                        Straight from the Source. No Middlemen. No Nonsense
                     </p>
                 </div>
             </section>
@@ -530,7 +536,7 @@
                 <!-- Brand Section -->
                 <div class="footer-brand-section">
                     <div class="footer-brand-logo">
-                        <i data-lucide="mountain" class="footer-logo-icon"></i>
+                        <img src="/Img/logo.png" alt="" class="brand-icon" style="width: 3rem;"/>
                         <span class="footer-brand-name">PAHARI GOODNESS</span>
                     </div>
                     <p class="footer-brand-description">
@@ -572,13 +578,13 @@
                         <a href="#blog" class="footer-nav-link">BLOG</a>
                     </div>
                     
-                    <div class="footer-links-column">
+                    <!-- <div class="footer-links-column">
                         <a href="#" class="footer-nav-link">PORTFOLIO</a>
                         <a href="#" class="footer-nav-link">SERVICES</a>
                         <a href="#" class="footer-nav-link">TEAM MEMBERS</a>
                         <a href="#" class="footer-nav-link">CLIENT</a>
                         <a href="#" class="footer-nav-link">CONTACT</a>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
